force-app/main/default/objects/Master_Financial_Company__c/Master_Financial_Company__c.object-meta.xml
<CustomObject>
    <label>Master Financial Company</label>
    <nameField>
        <label>Lembaga LJK</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Financial Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>