force-app/main/default/objects/Master_Financial_Company__c/fields/attributes_jenis_lembaga__c.field-meta.xml
<CustomField>
    <fullName>attributes_jenis_lembaga__c</fullName>
    <label>attributes jenis lembaga</label>
    <length>255</length>
    <type>Text</type>
</CustomField>