force-app/main/default/objects/Master_Financial_Company__c/fields/attributes_sandi__c.field-meta.xml
<CustomField>
    <fullName>attributes_sandi__c</fullName>
    <label>attributes sandi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>