force-app/main/default/objects/Master_Financial_Company__c/fields/id_text__c.field-meta.xml
<CustomField>
    <fullName>id_text__c</fullName>
    <formula>text( id__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>id text</label>
    <type>Text</type>
</CustomField>