force-app/main/default/objects/Master_Financial_Company__c/fields/Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Id__c</fullName>
    <label>Parent Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>